--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,7 @@ jsonwebkey = { version="0.3.2", features=["jwt-convert"] }
 jsonwebtoken = "7.2.0"
 serde = "1.0.126"
 reqwest = { version="0.11.4", features=["json"] }
+openssl = { version = "0.10.29", features = ["vendored"] }
+
+[dev-dependencies]
+tokio = { version="1.8.1", features=["full"] }
