--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ jsonwebtoken = "7.2.0"
 serde = "1.0.126"
 reqwest = { version="0.11.4", features=["json"] }
 openssl = { version = "0.10.29", features = ["vendored"] }
+custom_error = "1.9.2"
 
 [dev-dependencies]
 tokio = { version="1.8.1", features=["full"] }
