--- a/examples/simple/Cargo.toml
+++ b/examples/simple/Cargo.toml
@@ -10,4 +10,4 @@ edition = "2018"
 oidc-verifier-rs = { path="../.."  }
 log = "0.4.14"
 env_logger = "0.9.0"
-tokio = "1.9.0"
+tokio = { version = "1.9.0", features = ["full"] }
